Find selected datasets from assignment
