# swagger.yaml
@@ -673,12 +673,10 @@ paths:
                     assignmentId: 63459bfb91cf355a962cea18
                     fileType: c
                     granularity: 10
-                    datasets: ['6345cda0beb454ed03853cc9']
             example:
               assignmentId: 63459bfb91cf355a962cea18
               fileType: c
               granularity: 10
-              datasets: ['6345cda0beb454ed03853cc9']
         required: true
       responses:
         '200':
@@ -973,7 +971,6 @@ components:
         - assignmentId
         - fileType
         - granularity
-        - datasets
       type: object
       properties:
         assignmentId:
@@ -982,15 +979,10 @@ components:
           type: string
         granularity:
           type: string
-        datasets:
-          type: array
-          items:
-            type: string
       example:
         assignmentId: 63459bfb91cf355a962cea18
         fileType: c
         granularity: 10
-        datasets: ['6345cda0beb454ed03853cc9']
     updateUserAccount:
       title: Update User Account
       required:
